unpackaged/objects/wb_CarInsurancedCars__c.object
<CustomObject>
    <description>WellBe Insuranced Cars</description>
    <fields>
        <fullName>CarInsurance__c</fullName>
        <label>自動車関連保険契約</label>
        <referenceTo>wb_CarInsurance__c</referenceTo>
        <relationshipLabel>対象車</relationshipLabel>
        <relationshipName>CarInsuranceCar</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Car__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>車両</label>
        <referenceTo>wb_Vehicle__c</referenceTo>
        <relationshipLabel>対象車</relationshipLabel>
        <relationshipName>InsurancedCar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EngineNo__c</fullName>
        <label>エンジン番号</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstRegistryDate__c</fullName>
        <label>初登年月</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FrameNo__c</fullName>
        <label>車台番号</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalNumberofSeats__c</fullName>
        <label>法定座席数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>車型</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>前の対象番号</label>
        <referenceTo>wb_CarInsurancedCars__c</referenceTo>
        <relationshipLabel>入替対象車</relationshipLabel>
        <relationshipName>ReplacementCar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>所有区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>所有</fullName>
                </value>
                <value>
                    <fullName>レンタル</fullName>
                    <label>リース／レンタル</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <externalId>true</externalId>
        <label>形態</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingAction__c</fullName>
        <label>アクション待ち</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistryNumber__c</fullName>
        <label>登録番号</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplacedDate__c</fullName>
        <label>異動日0時</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UsingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>利用会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>対象車</relationshipLabel>
        <relationshipName>UsingCompanyInsurancedCar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>f_CarTaikaiKubun__c</fullName>
        <formula>if (
AND( 
AND( TEXT(CarInsurance__r.Status__c) = &apos;確定&apos;, ISNULL(PendingAction__c)=TRUE),
OR (
OR (
AND( AND( ISNULL(s_Prgs_MaxEndDate__c)=FALSE, s_Prgs_MaxEndDate__c &gt;= TODAY()), 
    OR(ISNULL(s_Psgr_CancelDate__c)=TRUE,s_Psgr_CancelDate__c&gt;=TODAY())),
AND( AND( ISNULL(s_Cps_MaxEndDate__c)=FALSE, s_Cps_MaxEndDate__c &gt;= TODAY()), 
    OR(ISNULL(s_Cps_CancelDate__c)=TRUE,s_Cps_CancelDate__c&gt;=TODAY()))
),
AND( AND( ISNULL(s_Vlt_MaxEndDate__c)=FALSE, s_Vlt_MaxEndDate__c &gt;= TODAY()), 
    OR(ISNULL(s_Vlt_CancelDate__c)=TRUE,s_Vlt_CancelDate__c&gt;=TODAY()))
)	
	
	), &quot;契約車&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>自動車退会区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_Info__c</fullName>
        <formula>IF(ISBLANK(PendingAction__c),TEXT(CarInsurance__r.Status__c), PendingAction__c ) + &apos; &apos; 
+ IF (ISNULL( ReplacedDate__c),&apos;&apos;, &apos;異0時：&apos; + TEXT( ReplacedDate__c) ) + &apos; &apos; 
+ IF (ISNULL(s_Prgs_MaxEndDate__c),&apos;&apos;, &apos;搭：&apos; ) + TEXT(s_Prgs_MaxEndDate__c) + &apos; &apos; 
+ IF (ISNULL(s_Psgr_CancelDate__c),&apos;&apos;, &apos;（解24：&apos; + TEXT(s_Psgr_CancelDate__c) +&apos;)&apos; ) + &apos; &apos; 
+ IF (ISNULL(s_Cps_MaxEndDate__c),&apos;&apos;, &apos;強：&apos; ) + TEXT(s_Cps_MaxEndDate__c) + &apos; &apos; 
+ IF (ISNULL(s_Cps_CancelDate__c),&apos;&apos;, &apos;（解24：&apos; + TEXT(s_Cps_CancelDate__c) +&apos;)&apos; ) + &apos; &apos; 
+ IF (ISNULL(s_Vlt_MaxEndDate__c),&apos;&apos;, &apos;任：&apos; ) + TEXT(s_Vlt_MaxEndDate__c)
+ IF (ISNULL(s_Vlt_CancelDate__c),&apos;&apos;, &apos;（解24：&apos; + TEXT(s_Vlt_CancelDate__c) +&apos;)&apos; ) + &apos; &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>情報</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_PreviousCarNumber__c</fullName>
        <formula>OriginalCar__r.RegistryNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>前車両番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_UsingCompCode__c</fullName>
        <formula>UsingCompany__r.CompanyCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>利用会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s_Cps_CancelDate__c</fullName>
        <label>（強制）解約日24時</label>
        <summarizedField>wb_CIC_Compulsory__c.Cps_CancelDate__c</summarizedField>
        <summaryForeignKey>wb_CIC_Compulsory__c.CarInsurancedCar__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>s_Cps_MaxEndDate__c</fullName>
        <label>強制最大終期日</label>
        <summarizedField>wb_CIC_Compulsory__c.Cps_CurrentEndDate__c</summarizedField>
        <summaryForeignKey>wb_CIC_Compulsory__c.CarInsurancedCar__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>s_Prgs_MaxEndDate__c</fullName>
        <label>搭乗最大終期日</label>
        <summarizedField>wb_CIC_Passenger__c.Psgr_CurrentEndDate__c</summarizedField>
        <summaryForeignKey>wb_CIC_Passenger__c.CarInsurancedCar__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>s_Psgr_CancelDate__c</fullName>
        <label>（搭乗）解約日24時</label>
        <summarizedField>wb_CIC_Passenger__c.Psgr_CancelDate__c</summarizedField>
        <summaryForeignKey>wb_CIC_Passenger__c.CarInsurancedCar__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>s_Vlt_CancelDate__c</fullName>
        <label>（任意）解約日 24時</label>
        <summarizedField>wb_CIC_Compulsory__c.Vlt_CancelDate__c</summarizedField>
        <summaryForeignKey>wb_CIC_Compulsory__c.CarInsurancedCar__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>s_Vlt_MaxEndDate__c</fullName>
        <label>任意最大終期日</label>
        <summarizedField>wb_CIC_Compulsory__c.Vlt_EndDate__c</summarizedField>
        <summaryForeignKey>wb_CIC_Compulsory__c.CarInsurancedCar__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>対象車</label>
    <nameField>
        <label>対象車番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>